--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: main
 
 on:
   push:
-    branches: [main]
+    # branches: [main]
     tags:
       - '*'
   pull_request:
@@ -43,7 +43,8 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     if: "startsWith(github.ref, 'refs/tags/')"
-    needs: [sdist, main]
+    # needs: [sdist, main]
+    needs: [sdist]
     permissions:
       id-token: write
     steps:
