--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,16 @@ readme = "README.md"
 authors = [
   { name = "Felix Scherz", email = "felixwscherz@gmail.com" },
 ]
+license = {file = "LICENSE"}
+classifiers = [
+  "Programming Language :: Python",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: Implementation :: CPython",
+  "Programming Language :: Python :: Implementation :: PyPy",
+]
 
 [build-system]
 requires = [
