--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,28 +2,28 @@ name: main
 
 on:
   push:
-    # branches: [main]
+    branches: [main]
     tags:
       - '*'
   pull_request:
 
 jobs:
-  # main:
-  #   strategy:
-  #     matrix:
-  #       os: [ubuntu-latest]
-  #       python-version: ["3.9", "3.10", "3.11", "3.12"]
-  #   runs-on: ${{ matrix.os }}
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - uses: actions/setup-python@v5
-  #       with:
-  #         python-version: ${{ matrix.python-version}}
-  #     - name: install tox
-  #       run: python -m pip install --upgrade tox virtualenv pip
-  #     - name: run tox
-  #       run: tox -e py
-  #
+  main:
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version}}
+      - name: install tox
+        run: python -m pip install --upgrade tox virtualenv pip
+      - name: run tox
+        run: tox -e py
+
   sdist:
     runs-on: ubuntu-latest
     steps:
@@ -43,8 +43,7 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     if: "startsWith(github.ref, 'refs/tags/')"
-    # needs: [sdist, main]
-    needs: [sdist]
+    needs: [sdist, main]
     permissions:
       id-token: write
     steps:
